# data-doctor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
core/agents/: Diagnosis.py  EHR.py  ML.py  Main.py  Planner.py  ResponseGenerator.py  State.py  __init__.py
core/database/: VectorStore.py  __init__.py
core/ml/: BaseMLModels.py  Classifier.py  Regression.py  __init__.py
core/pipelines/: TrainPipeline.py  UploadPipeline.py  __init__.py
core/utils/: __init__.py  utils.py
scripts/: run_ml_training.py  run_uploader.py
