[project]
name = "loka-challenge"
version = "0.1.0"
description = "Data Doctor - AI Health Assistant"
authors = [
    {name = "augusto.cms7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "langgraph (>=0.5.4,<0.6.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "qdrant-client[fastembed] (>=1.15.0,<2.0.0)",
    "pandasai (>=3.0.0b2)",
    "pandasai-litellm (>=0.0.1,<0.0.2)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langfuse (>=3.2.1,<4.0.0)",
    "termcolor (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
